data/derived/comb/progs/unify/prog1887.ml.out
Characters 220-224:
  let (_, res) = List.fold_left f base args in
                                       ^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type (int list * int list) list
